[package]
name = "rollup-nft"
version = "0.1.0"

authors = ["Rooch Contributors <opensource@rooch.network>"]
edition = "2021"
homepage = "https://rooch.network"
license = "Apache-2.0"
publish = false
repository = "https://github.com/rooch-network/rollup-nft"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "0.1.2"
anyhow = "1.0.62"
bcs = "0.1.3"
better_any = "0.1.1"
clap = { version = "3", features = ["derive", ] }
once_cell = "1.10.0"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
smallvec = "1.6.1"
thiserror = "1.0.34"
tokio = { version = "1", features = ["full"] }

smt = { git = "https://github.com/rooch-network/smt", rev = "bba62b6e82b3ed81f1c27a2f6f36a017315cdf0a" }

moveos-types = { git = "https://github.com/rooch-network/rooch", rev = "3a0353d6fc20ba7f69656796fa6d2e7694cb6116" }
moveos-stdlib = { git = "https://github.com/rooch-network/rooch", rev = "3a0353d6fc20ba7f69656796fa6d2e7694cb6116" }
moveos-statedb = { git = "https://github.com/rooch-network/rooch", rev = "3a0353d6fc20ba7f69656796fa6d2e7694cb6116" }